syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";

// silence
message SilenceID {
    string alert_config_id = 1;
    string alert_rule_id = 2;
    string resource_id = 3;
}

message Silence {
    SilenceID silence_id = 1;
    int32 dutation = 2;
    int64 start_timestamp = 3;
}

message SilenceResponse {
    Silence silence = 1;
    Error error = 2; //optional
}

service SilenceHandler {
    // silence
    rpc CreateSilence (Silence) returns (SilenceResponse) {
    }

    rpc DeleteSilence (Silence) returns (SilenceResponse) {
    }

    rpc UpdateSilence (Silence) returns (SilenceResponse) {
    }

    rpc GetSilence (Silence) returns (SilenceResponse) {
    }
}