syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";

message Message {
    string user_name = 1;
    string user_id = 2;
    int64 timestamp = 3;
    string text = 4;
}

// suggestion
message Suggestion {
    string resource_id = 1;
    string alert_rule_id = 2;
    repeated Message messages = 3;
}

message SuggestionResponse {
    Suggestion suggestion = 1;
    Error error = 2;
}

service SuggestionHandler {
    // suggestion
    rpc UpdateSuggestion (Suggestion) returns (SuggestionResponse) {
    }

    rpc GetSuggestion (Suggestion) returns (SuggestionResponse) {
    }
}